@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+  <iati-activity>
+    <iati-identifier>12345</iati-identifier>
+    <description>xxx</description>
+    <activity-scope code="XXX" xml:lang="en">Scope</activity-scope>
+  </iati-activity>
+</iati-activities>
